Fix Kotlin version: upgrade AGP 8.1.0, Kotlin 1.9.0, Gradle 8.3, force stdlib resolution

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,6 +5,17 @@ allprojects {
     }
 }
 
+// Force all modules to use a compatible Kotlin stdlib
+subprojects {
+    configurations.all {
+        resolutionStrategy {
+            force 'org.jetbrains.kotlin:kotlin-stdlib:1.9.0'
+            force 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.9.0'
+            force 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.0'
+        }
+    }
+}
+
 rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
