fix: use --no-fatal-infos for flutter analyze (168 withOpacity deprecation infos)

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -30,7 +30,7 @@ jobs:
         run: flutter pub get
 
       - name: Run flutter analyze
-        run: flutter analyze
+        run: flutter analyze --no-fatal-infos
 
       - name: Generate Upload Keystore
         run: |
