--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   percent_indicator: ^4.2.5
   path: ^1.9.0
   timezone: ^0.10.1
+  android_alarm_manager_plus: ^4.0.6
   sqflite_common_ffi_web: ^0.4.5+4
   http: ^1.2.0
 
