--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   path: ^1.9.0
   timezone: ^0.10.1
   android_alarm_manager_plus: ^4.0.6
-  flutter_foreground_task: ^8.11.0
+  workmanager: ^0.5.2
   sqflite_common_ffi_web: ^0.4.5+4
   http: ^1.2.0
 
