feat: add sound to in-app slide notification + fix reliability on all phones
- Add audioplayers package to play daddy_sound.wav when in-app notification shows
- Copy daddy_sound.wav to Flutter assets for audioplayers access
- Add overlay retry mechanism (3 retries with 300ms delay) for reliability
- Set audio context to notification/sonification (ducks music instead of stopping)
- Bump notification channel to v8 (fresh channel on all devices, forces new sound config)
- Add REQUEST_IGNORE_BATTERY_OPTIMIZATIONS permission (helps Xiaomi/MIUI)
- Add SYSTEM_ALERT_WINDOW permission (overlay support on restrictive OEMs)
- Delete old cached channels v3-v7 on init

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   timezone: ^0.10.1
   android_alarm_manager_plus: ^4.0.6
   workmanager: ^0.5.2
+  audioplayers: ^6.1.0
   sqflite_common_ffi_web: ^0.4.5+4
   http: ^1.2.0
 
@@ -89,6 +90,7 @@ flutter:
   assets:
     - assets/icon/app_icon.png
     - assets/images/logo.png
+    - assets/sounds/daddy_sound.wav
 
   # To add assets to your application, add an assets section, like this:
   # assets:
