feat: implement Android Bubble notifications (Messenger-style chat heads)
- Create BubbleActivity.kt with allowEmbedded + resizeableActivity for bubble expanded view
- Create BubbleNotificationHelper.kt with full bubble lifecycle:
  - Native bubble channel with setAllowBubbles(true) + custom daddy_sound
  - Dynamic shortcut publishing (required by Bubble API)
  - BubbleMetadata with auto-expand on high priority
  - MessagingStyle for chat-like appearance
  - Full fallback chain: Bubble  MessagingStyle  Simple  Basic
  - Permission-aware (checks POST_NOTIFICATIONS on Android 13+)
- Add platform channel (com.aidaddy.ai_daddy/bubble) in MainActivity.kt
  - showBubble, cancelBubble, areBubblesSupported, createBubbleChannel
- Update notification_service_impl.dart:
  - Primary: Native bubble via platform channel
  - Fallback 1: MessagingStyle heads-up (flutter_local_notifications)
  - Fallback 2: Simple heads-up notification
  - Fallback 3: Ultra-bare notification
  - Plus: In-app slide overlay with sound (always)
  - Bubble support detection cached on init
  - Channel bumped to v9, old v3-v8 deleted
- Register BubbleActivity in AndroidManifest with required attributes
- Add shortcuts.xml + strings.xml for shortcut labels
- Add androidx.core:core-ktx dependency
- Add ProGuard keep rules for bubble/shortcut classes

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -38,6 +38,23 @@
             </intent-filter>
         </activity>
 
+        <!-- Bubble Activity — opens when user taps expanded bubble -->
+        <activity
+            android:name=".BubbleActivity"
+            android:exported="false"
+            android:allowEmbedded="true"
+            android:resizeableActivity="true"
+            android:documentLaunchMode="always"
+            android:theme="@style/NormalTheme"
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
+            android:hardwareAccelerated="true"
+            android:windowSoftInputMode="adjustResize" />
+
+        <!-- Share target for bubble shortcut -->
+        <meta-data
+            android:name="android.app.shortcuts"
+            android:resource="@xml/shortcuts" />
+
         <!-- Notification scheduled receiver -->
         <receiver android:exported="false" android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver" />
         <receiver android:exported="false" android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver">
