--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,12 +29,15 @@ jobs:
           channel: 'stable'
           cache: true
 
-      - name: Generate signing keystore
+      - name: Restore signing keystore
+        env:
+          KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
         run: |
-          if [ -n "${{ secrets.KEYSTORE_BASE64 }}" ]; then
-            echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > android/app/upload-keystore.jks
-            echo "Using stored keystore from secrets"
+          if [ -n "$KEYSTORE_BASE64" ]; then
+            echo "$KEYSTORE_BASE64" | base64 -d > android/app/upload-keystore.jks
+            echo "Restored keystore from secret"
           else
+            echo "No KEYSTORE_BASE64 secret found, generating new keystore"
             keytool -genkey -v \
               -keystore android/app/upload-keystore.jks \
               -storetype JKS \
@@ -45,27 +48,14 @@ jobs:
               -storepass "AiDaddy2026!Secure" \
               -keypass "AiDaddy2026!Secure" \
               -dname "CN=AI Daddy, OU=Mobile, O=AI Daddy, L=Unknown, ST=Unknown, C=US"
-            echo "Generated new keystore"
           fi
-          # Output fingerprint for verification
-          keytool -list -v -keystore android/app/upload-keystore.jks -storepass "AiDaddy2026!Secure" -alias ai-daddy-release | grep SHA1
-
-      - name: Upload keystore as artifact (for secret setup)
-        if: ${{ !secrets.KEYSTORE_BASE64 }}
-        uses: actions/upload-artifact@v4
-        with:
-          name: signing-keystore
-          path: android/app/upload-keystore.jks
-          retention-days: 1
+          keytool -list -v -keystore android/app/upload-keystore.jks -storepass "AiDaddy2026!Secure" -alias ai-daddy-release 2>/dev/null | grep SHA1 || true
 
       - name: Create key.properties
         run: |
-          cat > android/key.properties << EOF
-          storePassword=AiDaddy2026!Secure
-          keyPassword=AiDaddy2026!Secure
-          keyAlias=ai-daddy-release
-          storeFile=../app/upload-keystore.jks
-          EOF
+          printf 'storePassword=AiDaddy2026!Secure\nkeyPassword=AiDaddy2026!Secure\nkeyAlias=ai-daddy-release\nstoreFile=../app/upload-keystore.jks\n' > android/key.properties
+          echo "key.properties contents:"
+          cat android/key.properties
 
       - name: Install dependencies
         run: flutter pub get
