--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -12,7 +12,7 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-    namespace = "com.aidaddy.app"
+    namespace = "com.aidaddy.ai_daddy"
     compileSdk = 35
     ndkVersion = "27.0.12077973"
 
@@ -27,7 +27,7 @@ android {
     }
 
     defaultConfig {
-        applicationId = "com.aidaddy.app"
+        applicationId = "com.aidaddy.ai_daddy"
         minSdk = 24
         targetSdk = 35
         versionCode = 1
