fix: use flutter.versionCode/versionName from pubspec, bump to 1.0.0+4

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,8 +30,8 @@ android {
         applicationId = "com.aidaddy.ai_daddy"
         minSdk = 24
         targetSdk = 35
-        versionCode = 1
-        versionName = "1.0.0"
+        versionCode = flutter.versionCode
+        versionName = flutter.versionName
         multiDexEnabled true
     }
 
